<resources>
    <string name="app_name">Jolly Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_tab">SongTab</string>
    <string name="tab0">Settings</string>
    <string name="tab1">Songs</string>
    <string name="tab2">Artists</string>
    <string name="tab3">Playlists</string>
    <string name="tab4">Genres</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cross_leave_now_playing">cross_leave_now_playing</string>
    <string name="total_songs">Total Songs</string>
    <string name="_0_00_0_00">0:00 / 0:00</string>
    <string name="create_new_queue">Create New Queue</string>
    <string name="play_next">Play Next</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="scan_fingerprint_auto">Scan Fingerprint (Auto)</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="delete">Delete</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="problem_deleting_song">There was a problem trying to delete the song</string>
    <string name="expand_arrow">expand_arrow</string>
    <string name="song_queue">Song Queue</string>
    <string name="playning_next">Playing Next</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="find_additional_music_information_for_songs_requires_internet_connection">Find additional music information for songs(Requires Internet Connection)</string>
    <string name="sort_button">Sort Button</string>
    <string name="fingerprint_button">Fingerprint Button</string>
    <string name="search_button">Search Button</string>
    <string name="close_button">Close Button</string>
    <string name="retrieving_your_music">Retrieving your music...</string>
    <string name="previous_text">Previous</string>
    <string name="play_text">Play</string>
    <string name="next_text">Next</string>
    <string name="cancel_scan">Cancel Scan</string>
    <string name="slash">/</string>
    <string name="done">Completed</string>
    <string name="close">Close Scan</string>
    <string name="not_found">Not found</string>
    <string name="equalizer">Equalizer</string>
    <string name="eq_close">Close</string>
    <string name="save">Save</string>
    <string name="tab5">Albums</string>
    <string name="hz">Hz</string>
    <string name="db">dB</string>
    <string name="waiting_for_internet">Waiting for Internet connection…</string>
    <string name="bass">Bass</string>
    <string name="volume">Volume</string>
    <string name="vocal">Vocal</string>
    <string name="treble">Treble</string>
    <string name="add_preset">Add Preset</string>
    <string name="name">Rock, Metal, Electronic, Folk, etc.</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="playlist_name_input">Playlist Name</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create_playlist">Create</string>
    <string name="playlists">Playlists</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="not_available">N/A</string>
    <string name="tracks">Track(s)</string>
    <string name="length">Length:</string>
    <string name="unknown">Unknown</string>
    <string name="released">Released:</string>
    <string name="equalizer_settings">Equalizer Settings</string>
    <string name="theme">Theme</string>
    <string name="play_queue_options"><![CDATA[Play & Queue Options]]></string>
    <string name="privacy">Privacy</string>
    <string name="notification_settings">Notification</string>
    <string name="dynamic_eq">Dynamic EQ</string>
    <string name="dynamic_eq_text">\t\tChange equalizer settings dynamically when a song\'s genre matches the name of an EQ Preset. Uses the currently set EQ Preset when genre name or the corresponding preset name is not found.</string>
    <string name="language">Language</string>
    <string name="default_theme">Theme</string>
    <string name="accent_color">Accent Color</string>
    <string name="change_background_image_to_match_album_art">Change background image to match album art</string>
    <string name="background_options">Background Options</string>
    <string name="always_shuffle">Always Shuffle</string>
    <string name="crossfade">Crossfade</string>
    <string name="open_now_playing_on_play">Open Now Playing on play</string>
    <string name="shake_to_play_next">Shake to Play Next</string>
    <string name="themes">Themes</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="transparent">Transparent</string>
    <string name="blur">Blur</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="scanning_files">Scanning files…</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="remove_all_songs">Remove All Songs</string>
    <string name="song_title">Song Title:</string>
    <string name="artist_name">Artist Name:</string>
    <string name="album_title">Album Title:</string>
    <string name="genre">Genre:</string>
    <string name="release_date">Release Date:</string>
    <string name="track">Track #:</string>
    <string name="tap_the_album_art_to_change_or_remove">Tap the album art to change or remove</string>
    <string name="choose_art_from_storage">Choose art from storage</string>
    <string name="remove_art">Remove Art</string>
    <string name="set_as_default_background">Set as default background</string>
    <string name="fingerprint_text">fingerprint=</string>
    <string name="fingerprint_text_not_available">fingerprint= Not Available</string>
    <string name="select_new_art">Select New Art</string>
    <string name="no_perm_to_delete">No permission to delete</string>
    <string name="unable_to_delete">Unable to delete a playing song</string>
    <string name="track_s">Tracks</string>
    <string name="track_1">Track</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="now_playing">Now Playing</string>
    <string name="goto_album">Goto Album</string>
    <string name="goto_artist">Goto Artist</string>
    <string name="read_perm_require">Storage permissions are required to find music on the device.</string>
    <string name="_0">0</string>
    <string name="permission_required">Permission required</string>
    <string name="read_permission_required">The READ_EXTERNAL_STORAGE permission is required to find media on the device.</string>
    <string name="ok">OK</string>
    <string name="google_ad_id"></string>
    <string name="no_songs">The song list is empty.</string>
    <string name="do_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="eq_disabled">The Equalizer is currently Disabled</string>
    <string name="turn_on_off">Turn On/Off</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="storage_options">Storage Options</string>
    <string name="re_scan_music_storage">Re-Scan Music Storage</string>
    <string name="reset_fingerprint_database">Reset Fingerprint Database</string>
    <string name="show_media_notification">Show Media Notification</string>
    <string name="include_ringtones">Include Ringtones</string>
    <string name="english">English</string>
    <string name="loop">Loop</string>
    <string name="privacy_policy">
Jolly Apps built the Jolly Music Player app as an Ad Supported app. This SERVICE is provided by Jolly Apps at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Jolly Music Player unless otherwise defined in this Privacy Policy.
\n\n
Information Collection and Use
\n\n
The app does use third-party services that may collect information used to identify you.
\n\n
Link to the privacy policy of third-party service providers used by the app
\n
\n*   [Google Play Services](https://www.google.com/policies/privacy/)
\n*   [Google Analytics for Firebase](https://firebase.google.com/policies/analytics)
\n*   [Firebase Crashlytics](https://firebase.google.com/support/privacy/)
\n\n
Log Data
\n\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n\n
Cookies
\n\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
\n\n
Service Providers
\n\n
I may employ third-party companies and individuals due to the following reasons:
\n
\n*   To facilitate our Service;
\n*   To provide the Service on our behalf;
\n*   To perform Service-related services; or
\n*   To assist us in analyzing how our Service is used.
\n\n
I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n\n
Security
\n\n
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n\n
Links to Other Sites
\n\n
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n\n
Changes to This Privacy Policy
\n\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2023-05-15
\n\n
Contact Us
\n\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at jolly.apps2023@gmail.com.
</string>
</resources>