<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_gradient"
    android:focusable="true"
    android:clickable="true">
    <item
        android:id="@+id/popup_play"
        android:title="@string/play"/>
    <item
        android:id="@+id/popup_play_shuffle"
        android:title="@string/shuffle"/>
    <item
        android:id="@+id/popup_play_next"
        android:title="@string/play_next"/>
    <item
        android:id="@+id/popup_add_playlist"
        android:title="@string/add_to_playlist"/>
    <!--<item
        android:id="@+id/popup_edit_tags"
        android:title="@string/edit_tags"/>-->
    <item
        android:id="@+id/popup_scan_fingerprint"
        android:title="@string/scan_fingerprint_auto"/>
    <item
        android:id="@+id/popup_delete"
        android:title="@string/delete"/>
</menu>